assets/css/custom.scss
---
# Enter any custom Sass in this file.
---
#disclaimer .alert a {
      color: #0000CD; }

.navbar-brand img{
      width: 250px;
}

@media screen and (min-width: 500px){
      .navbar-brand img{
            width: 350px;
      }
}

#disclaimer {
  .disclaimer-alert {
    padding-bottom: 15px;
    padding-top: 15px
  }
}

.btn-takepart {
  background: #DD1367 !important;
  float: right;
  margin-top: -7px;
  margin-right: -9px;
  box-shadow: 0 2px 0 #580829;
  display: none;
  @media only screen and (min-width: 992px) {
    display: inline-block;
  }
  @media only screen and (min-width: 768px) and (max-width: 991px) {
    display: block;
    width: 194.14px;
    float: unset;
    margin-top: 10px;  
  }

  &:hover, &:active {
    background: #A01951 !important;
  }
  &:focus {
    background: #fd0 !important;
    color: #0b0c0c !important;
  }  
}

.layout-frontpage-alt .btn-takepart {
  @media only screen and (max-width: 768px) {
    display: block;
    width: 194.14px;
    float: unset;
    margin-top: 10px;
  }      
}

.ten {
  width: 10%;
}
.fourtyfive {
  width: 45%;
}


.blank {
  background-colour: #ffffff
}

#data-notice {
  margin-left: 30px;
}

.notice-heading {
  font-size: 19px;
  font-weight: bold;
}

.inset-text {
  border-left: 10px solid #b1b4b6;
  padding: 15px;
  margin-bottom: 30px;
  margin-top: 30px;
  margin-left: 30px;
}

body.contrast-high {
  .fa-exclamation-circle {
    color: white;
  }
}

